[package]
description = "A 7z decompressor/compressor written in pure rust"
edition = "2021"
homepage = "https://github.com/dyz1990/sevenz-rust"
keywords = ["7z", "7zip", "sevenz", "decompress"]
license = "Apache-2.0"
name = "sevenz-rust"
readme = "README.md"
repository = "https://github.com/dyz1990/sevenz-rust"
version = "0.2.4"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
aes256 = ["aes", "cbc"]
compress = ["lzma-rust/encoder"]
default = ["compress"]

[dependencies]
aes = {version = "0.8", optional = true}
bit-set = "0.5.3"
byteorder = "1.4"
cbc = {version = "0.1", optional = true}
crc = "3.0.0"
lzma-rust = {path = "lzma-rust", default-features = false, version = "0.1.0"}
sha2 = {version = "^0.9"}
zstd = "0.12.3+zstd.1.5.2"
filetime="0.2.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2"

[dev-dependencies]
tempfile = "3.3.0"

[[example]]
features = ["compress"]
name = "compress"
