[package]
description = "A 7z decompressor/compressor written in pure rust"
edition = "2021"
homepage = "https://github.com/dyz1990/sevenz-rust"
keywords = ["7z", "7zip", "sevenz", "decompress"]
license = "Apache-2.0"
name = "sevenz-rust"
readme = "README.md"
repository = "https://github.com/dyz1990/sevenz-rust"
version = "0.5.3"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
aes256 = ["aes", "cbc", "rand"]
bzip2 = ["dep:bzip2"]
compress = ["lzma-rust/encoder"]
default = ["compress"]

[dependencies]
aes = {version = "0.8", optional = true}
bit-set = "0.5.3"
byteorder = "1.4"
bzip2 = {version = "0.4.4", optional = true}
cbc = {version = "0.1", optional = true}
crc = "3.0.0"
filetime_creation = "0.1"
lzma-rust = {path = "lzma-rust", default-features = false, version = "0.1.5"}
nt-time = "0.5.0"
rand = {version = "0.8", optional = true}
sha2 = {version = "^0.9"}
zstd = {version = "0.12.3", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2"

[dev-dependencies]
rand = {version = "0.8"}
tempfile = "3.3.0"

[[example]]
name = "compress"
required-features = ["compress", "aes256"]

[[example]]
name = "decompress"
required-features = ["compress", "aes256"]

[[example]]
name = "advance"
required-features = ["compress", "aes256"]
