[package]
description = "LZMA/LZMA2 codec ported from 'tukaani xz for java'"
edition = "2021"
homepage = "https://github.com/dyz1990/sevenz-rust/tree/main/lzma-rust"
name = "lzma-rust"
repository = "https://github.com/dyz1990/sevenz-rust/tree/main/lzma-rust"
version = "0.1.3"
keywords = ["lzma"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["encoder"]
encoder = []

[dependencies]
byteorder = "1.4"
